<resources>
    <string name="app_name">Fire Cifras</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>

    <string name="menu_search">Buscar</string>
    <string name="menu_all">Ver todos</string>
    <string name="menu_myList">Minha lista</string>
    <string name="no_result">Digite no mínimo 2 caracteres</string>
    <string name="nothing">Nenhum resultado encontrado</string>
    <string name="title_activity_musics_acitivity">MusicsAcitivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="fire_cifras_gospel_2021">Fire Cifras</string>
    <string name="dica_de_pesquisa">Dica de Pesquisa</string>
    <string name="procure_por_t_tulo_ou_banda" translatable="false">Procure por TÍTULO ou BANDA</string>
    <string name="exemplo">Exemplos</string>
    <string name="apagado">Apagado com sucesso</string>
    <string name="adicionado">Adicionado à lista</string>
    <string name="nao">Não</string>
    <string name="sim">Sim</string>
    <string name="deseja_remover">Tem certeza que deseja remover ?</string>
    <string name="remover_da_lista">Remover da lista</string>

    <string name="adicionar_lista">Adicionar à lista</string>
    <string name="a_lista_est_vazia">A lista está vazia</string>
    <string name="letrasmaiusculas">Respeite os acentos, se houver</string>

    <!-- TEST ca-app-pub-3940256099942544/6300978111
   MY ACCOUNT ca-app-pub-7042395532979448/2694596237 -->
    <string name="id_admob">ca-app-pub-3940256099942544/6300978111</string>

</resources>