<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_search">

    <fragment
        android:id="@+id/nav_search"
        android:name="com.senne.cifragospel2021.view.SearchFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/search" />

    <fragment
        android:id="@+id/nav_all"
        android:name="com.senne.cifragospel2021.view.AllFragment"
        android:label="@string/menu_all"
        tools:layout="@layout/all" />

    <fragment
        android:id="@+id/nav_myList"
        android:name="com.senne.cifragospel2021.view.MyListFragment"
        android:label="@string/menu_myList"
        tools:layout="@layout/list" />
</navigation>